--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,4 +4,33 @@
 <% else %>
   <%= button_to "Sign in", new_user_session_path, method: :get %>
 <% end %>
-<h1> Homepage </h1>
+
+<%#= button_to "all users", users, method: :get %>
+
+<h1> Latest Users </h1>
+
+<% User.all.last(3).each do |user| %>
+  <%= user.email %>
+  <%= button_to "user profile", "user/#{user.id}", method: :get %>
+  <br>
+<% end %>
+
+<h1> Feed </h1>
+
+<%= button_to 'create mini post', { :controller => :mini_posts, :action => :new }, { :method => :get } %>
+<hr>
+
+<% MiniPost.where(user: @following).last(3).reverse_each do |post| %>
+  <%= post.content %>
+  <br>
+  <%= post.user.email %>
+  <br>
+  <%= post.created_at %>
+  <br>
+  <p>Likes: </p><%= post.likes.to_i %>
+  <% if user_signed_in? %>
+    <%= button_to "Like", { :controller => :mini_posts, :action => :like, :post_id => post.id, method: :post } %>
+    <%= button_to "Dislike", { :controller => :mini_posts, :action => :dislike, :post_id => post.id, method: :post } %>
+  <% end %>
+  <hr>
+<% end %>
