--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,10 @@
   <body>
   <p class="notice"><%= notice %></p>
   <p class="alert"><%= alert %></p>
+
+  <%= %>
+  <%= link_to "Home", root_path %>
+  <hr>
   <%= yield %>
   </body>
 </html>
